# rnn-playground

./: Cargo.toml
src/: lib.rs  tokenizer.rs
src/dataset/: mod.rs  tinystories.rs
src/dataset/util/: git.rs
src/model/: decoder.rs  lm.rs  mod.rs  rnn.rs  seq.rs
src/model/seq/: mod.rs  rnn.rs  some.rs
src/tokenizer/: char_.rs  hf.rs  mod.rs
src/util/: mod.rs  seq.rs
