[package]
name = "rnn-exp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
burn = { version = "0.19", features = [
    "std",
    "train",
    "wgpu",
    "fusion",
], default-features = false }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
tokenizers = "0.22.2"
wgpu = "26.0.1"
